fix css code spacing

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 	padding: 0;
 	background: #FFFFFF;
 	font-size: 12px;
-	/* color: #787878; */
 }
 #upperbar {
 	position: absolute;
@@ -135,34 +134,180 @@ div.siteurl, ul.siteurl, li.siteurl {
 	font-style: italic;
 	color: #FFFFFF;
 } 
-#logo a {	border: none;	background: none;	text-decoration: none;	color: white;}/* Search */#search {	text-align: center;	width: 280px;	height: 60px;	padding: 20px 0px 0px 0px;}/* Page *//* Feedburner Buzzboost styling */div.feedburnerFeedBlock {	margin-left: -40px;}
-span.headline {	font-size: 1em;	padding: 0px 0px 0px 0px;}
-p.date {	font-size: 1.1em;	padding: 0px 0px 0px 0px;	text-transform: uppercase;	color: #787878;}/* End Buzzboost styling */
-#page {	width: 768px;	margin: 0 auto;	padding: 0px 0px 0px 0px;}
-#page-bgtop {	padding: 20px 0px;}
+#logo a {	
+    border: none;	
+    background: none;	
+    text-decoration: none;	
+    color: white;
+}
+
+/* Search */
+#search {	
+    text-align: center;	
+    width: 280px;	
+    height: 60px;	
+    padding: 20px 0px 0px 0px;
+}
+
+/* Page *//* Feedburner Buzzboost styling */
+div.feedburnerFeedBlock {	
+    margin-left: -40px;
+}
+span.headline {	
+    font-size: 1em;	
+    padding: 0px 0px 0px 0px;
+}
+p.date {	
+    font-size: 1.1em;	
+    padding: 0px 0px 0px 0px;	
+    text-transform: uppercase;	
+    color: #787878;
+}
+
+/* End Buzzboost styling */
+#page {	
+    width: 768px;	
+    margin: 0 auto;	
+    padding: 0px 0px 0px 0px;
+}
+#page-bgtop {	
+    padding: 20px 0px;
+    }
 #page-bgbtm {}
-/* Content */#content {	float: left;	margin-left: 25px;	/* width: 660px; */	padding: 0px 0px 0px 0px;}
-.post {	margin-bottom: 15px;}
-.post .title {	height: 38px;	margin-bottom: 10px;	padding: 12px 0 0 0px;	letter-spacing: -.5px;	color: #000000;}
-.post .title a {	color: #000000;	border: none;}.post .meta {	margin-bottom: 30px;	padding: 5px 0px 15px 0px;	text-align: left;	font-size: 13px;	font-weight: bold;}
-.post .meta .date {	float: left;}
-.post .meta .posted {	float: right;}
-.post .entry {	/* padding top idk idk left*/	padding: 0px 0px 20px 40px;	padding-bottom: 20px;	text-align: justify;	font-size: 1.21em;	margin-left: -40px;}
-ul, li {	list-style-type: none;	margin-left: 0px;}
-.links {	padding-top: 20px;	font-size: .5em;	font-weight: bold;}
-/* Sidebar */#sidebar {	float: left;	width: 280px;	margin: 0px;	padding: 10px 0px 0px 0px;	color: #787878;}
-#sidebar ul {	margin: 0;	padding: 0;	list-style: none;}
-#sidebar li {	margin: 0;	padding: 0;}#sidebar li ul {	margin: 0px 0px;	padding-bottom: 30px;}
-#sidebar li li {	line-height: 35px;	margin: 0px 20px;	border-left: none;}#sidebar li li a {	padding-left: 10px;	/* background: url(images/img01.gif) no-repeat left 6px; */	font-size: 1.2em;}
-#sidebar li li span {	display: block;	margin-top: -20px;	padding: 0;	font-size: 11px;	font-style: italic;}
-#sidebar h2 {	height: 38px;	padding-left: 30px;	letter-spacing: -.5px;	font-size: 1.8em;}#sidebar p {	margin: 0 0px;	padding: 0px 30px 20px 30px;	text-align: justify;}
-#sidebar a {	border: none;}
-#sidebar a:hover {	text-decoration: underline;	color: #8A8A8A;}
-/* Footer */#footer {	height: 50px;	margin: 0 auto;	padding: 0px 0 15px 0;	/* border-top: 1px solid #DEDEDE; */}
-#footer p {	margin: 0;	padding-top: 20px;	line-height: normal;	font-size: 1em;	text-transform: capitalize;	text-align: center;	color: #A0A0A0;}
-#greeting_spacer {	top: 50px;	height: 10px;}
-h2.greeting {	font-size: 1.7em;}
-#footer a {	color: #8A8A8A;}
-/* Sitemap styling, just makes the xml human-readable */ url {	display: block;}
+
+/* Content */
+#content {	
+    float: left;
+    margin-left: 25px;
+    /* width: 660px; */	
+    padding: 0px 0px 0px 0px;
+}
+.post {	
+    margin-bottom: 15px;
+}
+.post .title {	
+    height: 38px;	
+    margin-bottom: 10px;	
+    padding: 12px 0 0 0px;	
+    letter-spacing: -.5px;	
+    color: #000000;
+}
+.post .title a {	
+    color: #000000;	
+    border: none;
+}
+.post .meta {	
+    margin-bottom: 30px;	
+    padding: 5px 0px 15px 0px;	
+    text-align: left;	font-size: 13px;	
+    font-weight: bold;
+}
+.post .meta .date {	
+    float: left;
+}
+.post .meta .posted {	
+    float: right;
+}
+.post .entry {
+    /* padding top idk idk left*/	
+    padding: 0px 0px 20px 40px;	
+    padding-bottom: 20px;	
+    text-align: justify;	
+    font-size: 1.21em;	
+    margin-left: -40px;
+}
+ul, li {
+	list-style-type: none;
+    margin-left: 0px;
+}
+.links {
+	padding-top: 20px;	
+    font-size: .5em;	
+    font-weight: bold;
+}
+
+/* Sidebar */
+#sidebar {
+	float: left;	
+    width: 280px;	
+    margin: 0px;	
+    padding: 10px 0px 0px 0px;	
+    color: #787878;
+}
+#sidebar ul {	
+    margin: 0;	
+    padding: 0;	
+    list-style: none;
+}
+#sidebar li {	
+    margin: 0;	
+    padding: 0;
+}
+#sidebar li ul {	
+    margin: 0px 0px;	
+    padding-bottom: 30px;
+}
+#sidebar li li {
+	line-height: 35px;	
+    margin: 0px 20px;	
+    border-left: none;
+}
+#sidebar li li a {	
+    padding-left: 10px;	
+    font-size: 1.2em;
+}
+#sidebar li li span {
+	display: block;	
+    margin-top: -20px;	
+    padding: 0;	
+    font-size: 11px;	
+    font-style: italic;
+}
+#sidebar h2 {
+	height: 38px;	
+    padding-left: 30px;	
+    letter-spacing: -.5px;	
+    font-size: 1.8em;
+}
+#sidebar p {	
+    margin: 0 0px;	
+    padding: 0px 30px 20px 30px;	
+    text-align: justify;
+}
+#sidebar a {
+	border: none;
+}
+#sidebar a:hover {
+	text-decoration: underline;	
+    color: #8A8A8A;
+}
+
+/* Footer */
+#footer {
+	height: 50px;	
+    margin: 0 auto;	
+    padding: 0px 0 15px 0;	
+}
+#footer p {	
+    margin: 0;	
+    padding-top: 20px;	
+    line-height: normal;	
+    font-size: 1em;	
+    text-transform: capitalize;	
+    text-align: center;	
+    color: #A0A0A0;
+}
+#greeting_spacer {	
+    top: 50px;	height: 10px;
+}
+h2.greeting {
+	font-size: 1.7em;
+}
+#footer a {	
+    color: #8A8A8A;
+}
+
+/* Sitemap styling, just makes the xml human-readable */ 
+url {	display: block;}
 loc {	display: block;}
 lastmod {	display: block;}
